2008-09-26  Jie Zhang  <jie.zhang@analog.com>

	* config/bfin-parse.y (asm_1): Fix reduce/reduce conflicts.

2008-09-24  Richard Henderson  <rth@redhat.com>

	* dw2gencfi.c (DWARF2_ADDR_SIZE): Provide default.
	(struct cfi_insn_data): Add ea member.
	(CFI_val_encoded_addr, dot_cfi_val_encoded_addr): New.
	(output_cfi_insn): Handle CFI_val_encoded_addr.
	(select_cie_for_fde): Don't match CFI_val_encoded_addr.
	* doc/as.texinfo (.cfi_val_encoded_addr): Document.

2008-09-25  Alan Modra  <amodra@bigpond.net.au>

	PR 6913
	* listing.c (print_options): Don't call fprintf without format string.

2008-09-19  Alan Modra  <amodra@bigpond.net.au>

	* write.c (TC_FORCE_RELOCATION_SUB_LOCAL): Heed md_register_arithmetic.
	(TC_VALIDATE_FIX_SUB): Likewise.
	* config/tc-frv.h (TC_FORCE_RELOCATION_SUB_LOCAL): Likewise.
	* config/tc-hppa.h (TC_FORCE_RELOCATION_SUB_LOCAL): Likewise.
	* config/tc-mn10300.h (TC_VALIDATE_FIX_SUB): Likewise.
	* config/tc-sh.h (TC_VALIDATE_FIX_SUB): Likewise.
	(TC_FORCE_RELOCATION_SUB_LOCAL): Likewise.
	* config/tc-sh64.h (TC_VALIDATE_FIX_SUB): Likewise.
	* config/tc-xtensa.h (TC_VALIDATE_FIX_SUB): Likewise.
	* doc/internals.texi (TC_FORCE_RELOCATION_SUB_ABS,
	TC_FORCE_RELOCATION_SUB_LOCAL, TC_VALIDATE_FIX_SUB): Show new param.

	* write.c (md_register_arithmetic): Define.
	(fixup_segment): Adjust TC_FORCE_RELOCATION_SUB_ABS invocation.
	Modify error message when registers involved.
	(TC_FORCE_RELOCATION_SUB_ABS): Heed md_register_arithmetic.
	* config/tc-sh.h (TC_FORCE_RELOCATION_SUB_ABS): Likewise.

2008-09-15  Alan Modra  <amodra@bigpond.net.au>

	* write.c (install_reloc): Correct EMIT_SECTION_SYMBOLS test.

2008-09-15  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-frv.c (md_apply_fix): Use abs_section_sym for
	relocs with no symbol.
	* config/tc-mmix.c (md_assemble): Mark fake symbol on
	BFD_RELOC_MMIX_BASE_PLUS_OFFSET as OK for use by relocs.
	(mmix_md_end): Likewise mark mmix reg contents section symbol.
