@@ -1,3 +1,10 @@
+2008-09-26  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* Makefile.am (TARG_ENV_HFILES): Add config/te-solaris.h.
+	* Makefile.in (TARG_ENV_HFILES): Likewise.
+	* configure.tgt (Solaris targets): Set em=solaris.
+	* config/te-solaris.h: New file.
+
 2008-09-26  Jie Zhang  <jie.zhang@analog.com>
 
 	* config/bfin-parse.y (asm_1): Fix reduce/reduce conflicts.
